Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -12,20 +12,19 @@
 
           <h4>PHARRELL WILLIAMS</h4>
 
-          <h2>HAPPY</h2>
+          <h2><span style="font-weight:bold">HAPPY</span></h2>
 
-          <h4>| FROM DESPICABLE ME 2 |</h4>
+          <h4><span style="font-weight:bold">DESPICABLE ME 2</span> |</h4>
 
         </div>
       </div>
 
       <div id="back" class="album">
 
-        <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+        <h3>| FROM <span style="font-weight:bold">DESPICABLE ME 2</span> |</h3>
+        <h1><span style="font-weight:bold">HAPPY</span></h1>
 
-        <!-- Level 1 'HAPPY' Header -->
-
-        <!-- Level 3 'WRITTEN BY...' Header -->
+        <h3>WRITTEN BY <span style="font-weight:bold">PHARRELL WILLIAMS</span></h3>
 
         <!-- pararaph text 'PUBLISHED BY...' -->
 
