--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h3>| FROM <span style="font-weight:bold">DESPICABLE ME 2</span> |</h3>
         <h1><span style="font-weight:bold">HAPPY</span></h1>
 
-        <h3>WRITTEN BY <span text>PHARRELL WILLIAMS</span></h3>
+        <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
 
         <p>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.
         </p>
