Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div id="back" class="album">
 
-        <h3>| FROM <span style="font-weight:bold">DESPICABLE ME 2</span> |</h3>
+        <h3>| FROM DESPICABLE ME 2|</h3>
         <h1><span style="font-weight:bold">HAPPY</span></h1>
 
         <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
