--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
           <h2><span style="font-weight:bold">HAPPY</span></h2>
 
-          <h4><span style="font-weight:bold">DESPICABLE ME 2</span> |</h4>
+          <h4>| DESPICABLE ME 2 |</h4>
 
         </div>
       </div>
