--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
           <h4>PHARRELL WILLIAMS</h4>
 
-          <h2><span style="font-weight:bold">HAPPY</span></h2>
+          <h2>HAPPY</h2>
 
           <h4>| FROM DESPICABLE ME 2 |</h4>
 
