--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <p><span text>PHARRELLWILLIAMS.COM</span>
 
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Colombia Logo">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
