--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Colombia Logo">
 
-        <!-- span text 'COLUMBIARECORDS.COM' -->
+        <span text>COLUMBIARECORDS.COM</span>
 
         </p>
 
