--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </p>
 
         <br>
-
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
+        <p>
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="Sony Logo">
+        </p>
       </div>
     </div>
   </body>
