--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </p>
 
         <p>
-        <span font-weight=bold>PHARRELLWILLIAMS.COM</span>
+        <span>PHARRELLWILLIAMS.COM</span>
 
         <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Colombia Logo">
 
