--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Colombia Logo">
 
-        <span text>COLUMBIARECORDS.COM</span>
+        <span>COLUMBIARECORDS.COM</span>
 
         </p>
 
