Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </p>
 
         <p>
-        <span class=display>PHARRELLWILLIAMS.COM
+        <span class=vertical-align>PHARRELLWILLIAMS.COM
 
         <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Colombia Logo">
 
