--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h3>| FROM DESPICABLE ME 2|</h3>
         <h1>HAPPY</h1>
         <span>PHARRELLWILLIAMS.COM</span>
+        <span>COLUMBIARECORDS.COM</span>
         <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Colombia Logo">
 
         <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
